--- a/Pickle.Web/app/ChannelPanel/ChannelPanelStyle.less
+++ b/Pickle.Web/app/ChannelPanel/ChannelPanelStyle.less
@@ -1,4 +1,34 @@
-﻿#pickle-channel-panel {
-    background-color: black;
+﻿@import  "../App.less";
 
+#pickle-channel-panel {
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: @sidebar-width;
+    background-color: #333;
+    color: #fff;
+    
+    padding-left: 1rem;
+
+    ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+
+        li {
+            display: block;
+            padding: 0.5rem 0 0.5rem 0.5rem;
+            transition: 0.3s ease all;
+
+            //border-radius: 0.5rem 0 0 0.5rem;
+        }
+
+        li.p-active {
+            /*background-color: #fff;
+            color: #333;*/
+            border-right: solid 15px #fff;
+
+        }
+    }
 }
