--- a/Pickle.Web/wwwroot/public/styles.css
+++ b/Pickle.Web/wwwroot/public/styles.css
@@ -1,5 +1,74 @@
 #pickle-channel-panel {
-  background-color: black;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 300px;
+  background-color: #333;
+  color: #fff;
+  padding-left: 1rem;
+}
+#pickle-channel-panel ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+#pickle-channel-panel ul li {
+  display: block;
+  padding: 0.5rem 0 0.5rem 0.5rem;
+  transition: 0.3s ease all;
+}
+#pickle-channel-panel ul li.p-active {
+  /*background-color: #fff;
+            color: #333;*/
+  border-right: solid 15px #fff;
+}
+.p-chat-panel-container {
+  background-color: #fff;
+  color: #333;
+  position: fixed;
+  left: 300px;
+  top: 0;
+  bottom: 0;
+  right: 0;
+}
+.p-chat-panel-container header {
+  line-height: 50px;
+  height: 50px;
+  border-bottom: solid 1px silver;
+  padding: 0 1rem;
+}
+.p-chat-panel-container .p-chat-panel {
+  overflow-y: scroll;
+  height: calc(100% -  110px );
+  padding: 1rem;
+}
+.p-chat-panel-container .p-chat-panel ul {
+  padding: 0;
+  margin: 0;
+}
+.p-chat-panel-container form {
+  border-top: solid 1px silver;
+  padding: 1rem;
+  height: 60px;
+}
+* {
+  box-sizing: border-box;
+}
+html {
+  padding: 0;
+  margin: 0;
+  font-family: "Segoe UI";
+}
+html body {
+  padding: 0;
+  margin: 0;
+}
+h1,
+h2,
+h3,
+h4 {
+  font-weight: normal;
 }
 
 /*# sourceMappingURL=styles.css.map*/
