restyle chat messages

--- a/Pickle.Web/app/ChatPanel/ChatPanelStyle.less
+++ b/Pickle.Web/app/ChatPanel/ChatPanelStyle.less
@@ -25,6 +25,17 @@
         padding: 1rem;
         ul {
             .no-padding();
+
+            .p-chat-message {
+                margin-top: 1rem;
+                //line-height: 20px;
+                color: grey;
+                > div:first-child {
+                    font-weight: bold;
+                    display: inline-block;
+                    min-width: 150px;
+                }
+            }
         }
     }
 
