--- a/Pickle.Web/wwwroot/public/styles.css
+++ b/Pickle.Web/wwwroot/public/styles.css
@@ -47,6 +47,15 @@
   padding: 0;
   margin: 0;
 }
+.p-chat-panel-container .p-chat-panel ul .p-chat-message {
+  margin-top: 1rem;
+  color: grey;
+}
+.p-chat-panel-container .p-chat-panel ul .p-chat-message > div:first-child {
+  font-weight: bold;
+  display: inline-block;
+  min-width: 150px;
+}
 .p-chat-panel-container form {
   border-top: solid 1px silver;
   padding: 1rem;
