add pointer to cursor on channel list

--- a/Pickle.Web/app/ChannelPanel/ChannelPanelStyle.less
+++ b/Pickle.Web/app/ChannelPanel/ChannelPanelStyle.less
@@ -1,5 +1,5 @@
 ﻿@import  "../App.less";
-
+    
 #pickle-channel-panel {
     position: fixed;
     left: 0;
@@ -20,14 +20,12 @@
             display: block;
             padding: 0.5rem 0 0.5rem 0.5rem;
             transition: 0.3s ease all;
-
+            cursor: pointer;
             //border-radius: 0.5rem 0 0 0.5rem;
         }
 
         li.p-active {
-            /*background-color: #fff;
-            color: #333;*/
-            border-right: solid 15px #fff;
+            color: tomato;
 
         }
     }
