ADd some data projects and access strategy code/tests

--- a/Pickle.Web/app/ChannelPanel/ChannelPanelStyle.less
+++ b/Pickle.Web/app/ChannelPanel/ChannelPanelStyle.less
@@ -6,8 +6,8 @@
     top: 0;
     bottom: 0;
     width: @sidebar-width;
-    background-color: #333;
-    color: #fff;
+    background-color: #252839;
+    color: #b5b5b7;
     
     padding-left: 1rem;
 
@@ -21,12 +21,10 @@
             padding: 0.5rem 0 0.5rem 0.5rem;
             transition: 0.3s ease all;
             cursor: pointer;
-            //border-radius: 0.5rem 0 0 0.5rem;
         }
 
         li.p-active {
-            color: tomato;
-
+            color: #f2b632;
         }
     }
 }
