--- a/Pickle.Web/app/ChatPanel/ChatPanelStyle.less
+++ b/Pickle.Web/app/ChatPanel/ChatPanelStyle.less
@@ -1,10 +1,12 @@
 ﻿@import  "../App.less";
 
 @chat-height-difference: 110px;
+@header-height: 50px;
 
 .p-chat-panel-container {
 
     background-color: #fff;
+    border-left: solid 1px #ABA8A8;
     color: #333;
     position: fixed;
     left: @sidebar-width;
@@ -13,9 +15,8 @@
     right: 0;
 
     header {
-        line-height: 50px;
-        height: 50px;
-        border-bottom: solid 1px silver;
+        line-height: @header-height;
+        height: @header-height;
         padding: 0 1rem;
     }
 
@@ -40,7 +41,6 @@
     }
 
     form {
-        border-top: solid 1px silver;
         padding: 1rem;
         height: 60px;
     }
